Table with hover visible element fix

--- a/src/styles/components/_tables.overrides.scss
+++ b/src/styles/components/_tables.overrides.scss
@@ -15,6 +15,21 @@ $table-stripped-border-radius: 8px;
     padding: 0 1.5rem 0.5rem 1.5rem;
     text-transform: uppercase;
   }
+
+  tr.hover-element {
+    td:last-child div {
+      cursor: pointer;
+      visibility: hidden;
+    }
+
+    &:hover td:last-child div {
+      visibility: visible;
+    }
+  }
+
+  td {
+    vertical-align: middle;
+  }
 }
 
 .table.table-striped {
@@ -117,18 +132,6 @@ $table-stripped-border-radius: 8px;
         background-color: #de5c62;
       }
     }
-  }
-}
-
-.hover-only { //for Delete icon in sessions table
-  div {
-    visibility: hidden;
-  }
-}
-
-.hover-only:hover {
-  div {
-    visibility: visible;
   }
 }
 
